Rename a lowercase proyect names

--- a/SGA.Server/SGA.Web.csproj
+++ b/SGA.Server/SGA.Web.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\sga.client\sga.client.esproj">
+    <ProjectReference Include="..\sga.client\sga.Client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
