--- a/sga.Web/appsettings.json
+++ b/sga.Web/appsettings.json
@@ -1,9 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "AuthDBConnection": "Server=BOURDIER-LEGION;Database=SGAAuthDB;User Id=bour;TrustServerCertificate=True;",
+    "AcademicDBConnection": "Server=BOURDIER-LEGION;Database=SGAAcademicDB;User Id=bour;TrustServerCertificate=True;"
+  }
+
 }
