--- a/sga.Web/appsettings.json
+++ b/sga.Web/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "AuthDBConnection": "Server=BOURDIER-LEGION;Database=SGAAuthDB;User Id=bour;TrustServerCertificate=True;",
-    "AcademicDBConnection": "Server=BOURDIER-LEGION;Database=SGAAcademicDB;User Id=bour;TrustServerCertificate=True;"
+
+    "AuthDBConnection": "Server=BOURDIER-LEGION;Database=SGAAuthDB;Trusted_Connection=True;TrustServerCertificate=True;",
+
+    "AcademicDBConnection": "Server=BOURDIER-LEGION;Database=SGAAcademicDB;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 
 }
